Fix: Update image paths in blog post to point to correct public assets

--- a/content/blog/1-임플란트-1개-가격.mdx
+++ b/content/blog/1-임플란트-1개-가격.mdx
@@ -4,7 +4,7 @@ description: "2026년 임플란트 1개 가격을 국산/수입 브랜드별로 
 keywords: "임플란트 1개 가격, 임플란트 비용, 임플란트 가격표"
 category: "임플란트-비용"
 publishedAt: "2026-02-14T14:19:22.151Z"
-featuredImage: "/images/implant-price-guide.jpg"
+featuredImage: "/images/blog/임플란트-1개-가격-1771075182301-0.webp"
 author: "강남임플란트치과"
 ---
 
@@ -14,7 +14,7 @@ author: "강남임플란트치과"
 
 이 글에서는 2026년 기준 임플란트 1개 가격의 모든 것을 파헤쳐보겠습니다. 브랜드별 실제 시세부터 숨겨진 추가 비용까지, 치과에서 알려주지 않는 진실을 모두 공개합니다.
 
-![2026년 임플란트 가격 가이드](/images/implant-price-guide.jpg)
+![2026년 임플란트 가격 가이드](/images/blog/임플란트-1개-가격-1771075182301-0.webp)
 
 ## 임플란트 1개 가격 결정하는 핵심 요소들
 
@@ -47,7 +47,7 @@ author: "강남임플란트치과"
 
 만 65세 이상이라면 건강보험 혜택으로 임플란트 1개 가격을 크게 절약할 수 있습니다. 2026년 현재 본인 부담금은 35만원에서 45만원 수준으로, 일반 진료비의 30%만 지불하면 됩니다.
 
-![브랜드별 임플란트 가격 비교](/images/brand-comparison.jpg)
+![브랜드별 임플란트 가격 비교](/images/blog/임플란트-1개-가격-1771075184643-1.webp)
 
 ## 합리적인 임플란트 1개 가격 선택 전략
 
