Fix: Generate unique optimized images for all blog posts

--- a/content/blog/2026-02-15-01-1-임플란트-1개-가격.mdx
+++ b/content/blog/2026-02-15-01-1-임플란트-1개-가격.mdx
@@ -1,9 +1,10 @@
 ---
-title: "2025년 강남 임플란트 1개 가격 총정리 - 병원별 비교"
-description: "2025년 강남 임플란트 1개 가격 총정리 - 병원별 비교에 대한 상세 가이드. 임플란트 1개 가격 정보와 꿀팁을 확인하세요."
-date: "2026-02-15"
-category: "임플란트 가격"
-author: "강남임플란트"
+title: 2025년 강남 임플란트 1개 가격 총정리 - 병원별 비교
+description: 2025년 강남 임플란트 1개 가격 총정리 - 병원별 비교에 대한 상세 가이드. 임플란트 1개 가격 정보와 꿀팁을 확인하세요.
+date: '2026-02-15'
+category: 임플란트 가격
+author: 강남임플란트
+featuredImage: /images/blog/1--1--1771087887854-0.webp
 ---
 
 # 2025년 강남 임플란트 1개 가격 총정리 - 병원별 비교
