--- a/content/blog/2026-02-15-02-29만원-임플란트-진짜-가능할까-숨겨진-비용-확인하기.mdx
+++ b/content/blog/2026-02-15-02-29만원-임플란트-진짜-가능할까-숨겨진-비용-확인하기.mdx
@@ -1,9 +1,10 @@
 ---
-title: "29만원 임플란트 진짜 가능할까? 숨겨진 비용 확인하기"
-description: "29만원 임플란트 진짜 가능할까? 숨겨진 비용 확인하기에 대한 상세 가이드. 임플란트 29만원 정보와 꿀팁을 확인하세요."
-date: "2026-02-15"
-category: "임플란트 가격"
-author: "강남임플란트"
+title: 29만원 임플란트 진짜 가능할까? 숨겨진 비용 확인하기
+description: 29만원 임플란트 진짜 가능할까? 숨겨진 비용 확인하기에 대한 상세 가이드. 임플란트 29만원 정보와 꿀팁을 확인하세요.
+date: '2026-02-15'
+category: 임플란트 가격
+author: 강남임플란트
+featuredImage: /images/blog/29-------1771087891119-0.webp
 ---
 
 # 29만원 임플란트 진짜 가능할까? 숨겨진 비용 확인하기
