--- a/content/blog/2026-02-15-04-임플란트-뼈이식-과정과-실패-증상-총정리.mdx
+++ b/content/blog/2026-02-15-04-임플란트-뼈이식-과정과-실패-증상-총정리.mdx
@@ -1,9 +1,10 @@
 ---
-title: "임플란트 뼈이식 과정과 실패 증상 총정리"
-description: "임플란트 뼈이식 과정과 실패 증상 총정리에 대한 상세 가이드. 임플란트 뼈이식 정보와 꿀팁을 확인하세요."
-date: "2026-02-15"
-category: "임플란트 시술"
-author: "강남임플란트"
+title: 임플란트 뼈이식 과정과 실패 증상 총정리
+description: 임플란트 뼈이식 과정과 실패 증상 총정리에 대한 상세 가이드. 임플란트 뼈이식 정보와 꿀팁을 확인하세요.
+date: '2026-02-15'
+category: 임플란트 시술
+author: 강남임플란트
+featuredImage: /images/blog/------1771087898691-0.webp
 ---
 
 # 임플란트 뼈이식 과정과 실패 증상 총정리
