--- a/content/blog/2026-02-15-05-임플란트-치료-기간은-단계별-과정-설명.mdx
+++ b/content/blog/2026-02-15-05-임플란트-치료-기간은-단계별-과정-설명.mdx
@@ -1,9 +1,10 @@
 ---
-title: "임플란트 치료 기간은? 단계별 과정 설명"
-description: "임플란트 치료 기간은? 단계별 과정 설명에 대한 상세 가이드. 임플란트 치료 정보와 꿀팁을 확인하세요."
-date: "2026-02-15"
-category: "임플란트 시술"
-author: "강남임플란트"
+title: 임플란트 치료 기간은? 단계별 과정 설명
+description: 임플란트 치료 기간은? 단계별 과정 설명에 대한 상세 가이드. 임플란트 치료 정보와 꿀팁을 확인하세요.
+date: '2026-02-15'
+category: 임플란트 시술
+author: 강남임플란트
+featuredImage: /images/blog/------1771087903163-0.webp
 ---
 
 # 임플란트 치료 기간은? 단계별 과정 설명
