--- a/content/blog/2026-02-15-06-치아-크라운-종류별-가격-비교-세라믹-지르코니아-PFM.mdx
+++ b/content/blog/2026-02-15-06-치아-크라운-종류별-가격-비교-세라믹-지르코니아-PFM.mdx
@@ -1,9 +1,10 @@
 ---
-title: "치아 크라운 종류별 가격 비교 (세라믹/지르코니아/PFM)"
-description: "치아 크라운 종류별 가격 비교 (세라믹/지르코니아/PFM)에 대한 상세 가이드. 크라운 정보와 꿀팁을 확인하세요."
-date: "2026-02-15"
-category: "치아 보철"
-author: "강남임플란트"
+title: 치아 크라운 종류별 가격 비교 (세라믹/지르코니아/PFM)
+description: 치아 크라운 종류별 가격 비교 (세라믹/지르코니아/PFM)에 대한 상세 가이드. 크라운 정보와 꿀팁을 확인하세요.
+date: '2026-02-15'
+category: 치아 보철
+author: 강남임플란트
+featuredImage: /images/blog/-------PFM-1771087910276-0.webp
 ---
 
 # 치아 크라운 종류별 가격 비교 (세라믹/지르코니아/PFM)
