--- a/content/blog/2026-02-15-07-2025년-치아-크라운-가격표-재질별-비용-차이.mdx
+++ b/content/blog/2026-02-15-07-2025년-치아-크라운-가격표-재질별-비용-차이.mdx
@@ -1,9 +1,10 @@
 ---
-title: "2025년 치아 크라운 가격표 - 재질별 비용 차이"
-description: "2025년 치아 크라운 가격표 - 재질별 비용 차이에 대한 상세 가이드. 치아 크라운 가격 정보와 꿀팁을 확인하세요."
-date: "2026-02-15"
-category: "치아 보철"
-author: "강남임플란트"
+title: 2025년 치아 크라운 가격표 - 재질별 비용 차이
+description: 2025년 치아 크라운 가격표 - 재질별 비용 차이에 대한 상세 가이드. 치아 크라운 가격 정보와 꿀팁을 확인하세요.
+date: '2026-02-15'
+category: 치아 보철
+author: 강남임플란트
+featuredImage: /images/blog/2025-------1771087914141-0.webp
 ---
 
 # 2025년 치아 크라운 가격표 - 재질별 비용 차이
