--- a/content/blog/2026-02-15-08-임플란트-시술-중-임시-치아-비용과-관리법.mdx
+++ b/content/blog/2026-02-15-08-임플란트-시술-중-임시-치아-비용과-관리법.mdx
@@ -1,9 +1,10 @@
 ---
-title: "임플란트 시술 중 임시 치아 비용과 관리법"
-description: "임플란트 시술 중 임시 치아 비용과 관리법에 대한 상세 가이드. 임시 치아 정보와 꿀팁을 확인하세요."
-date: "2026-02-15"
-category: "임플란트 시술"
-author: "강남임플란트"
+title: 임플란트 시술 중 임시 치아 비용과 관리법
+description: 임플란트 시술 중 임시 치아 비용과 관리법에 대한 상세 가이드. 임시 치아 정보와 꿀팁을 확인하세요.
+date: '2026-02-15'
+category: 임플란트 시술
+author: 강남임플란트
+featuredImage: /images/blog/-------1771087917596-0.webp
 ---
 
 # 임시 치아, 임플란트 시술 과정에서 꼭 알아야 할 모든 것
