--- a/content/blog/2026-02-15-09-임플란트-vs-브릿지-어떤-게-나한테-맞을까.mdx
+++ b/content/blog/2026-02-15-09-임플란트-vs-브릿지-어떤-게-나한테-맞을까.mdx
@@ -1,9 +1,10 @@
 ---
-title: "임플란트 vs 브릿지 - 어떤 게 나한테 맞을까?"
-description: "임플란트 vs 브릿지 - 어떤 게 나한테 맞을까?에 대한 상세 가이드. 치아 브릿지 정보와 꿀팁을 확인하세요."
-date: "2026-02-15"
-category: "치료 비교"
-author: "강남임플란트"
+title: 임플란트 vs 브릿지 - 어떤 게 나한테 맞을까?
+description: 임플란트 vs 브릿지 - 어떤 게 나한테 맞을까?에 대한 상세 가이드. 치아 브릿지 정보와 꿀팁을 확인하세요.
+date: '2026-02-15'
+category: 치료 비교
+author: 강남임플란트
+featuredImage: /images/blog/-vs------1771087920811-0.webp
 ---
 
 # 임플란트 vs 브릿지 - 어떤 게 나한테 맞을까?
