--- a/content/blog/2026-02-15-10-강남역-임플란트-잘하는-치과-BEST-5-2025년.mdx
+++ b/content/blog/2026-02-15-10-강남역-임플란트-잘하는-치과-BEST-5-2025년.mdx
@@ -1,9 +1,10 @@
 ---
-title: "강남역 임플란트 잘하는 치과 BEST 5 (2025년)"
-description: "강남역 임플란트 잘하는 치과 BEST 5 (2025년)에 대한 상세 가이드. 강남 치과 추천 정보와 꿀팁을 확인하세요."
-date: "2026-02-15"
-category: "치과 정보"
-author: "강남임플란트"
+title: 강남역 임플란트 잘하는 치과 BEST 5 (2025년)
+description: 강남역 임플란트 잘하는 치과 BEST 5 (2025년)에 대한 상세 가이드. 강남 치과 추천 정보와 꿀팁을 확인하세요.
+date: '2026-02-15'
+category: 치과 정보
+author: 강남임플란트
+featuredImage: /images/blog/----BEST-5-2025-1771087924074-0.webp
 ---
 
 # 강남역 임플란트 잘하는 치과 BEST 5 (2025년)
