--- a/content/blog/2026-02-16-11-임플란트-수명-20년-이상-쓰는-관리법.mdx
+++ b/content/blog/2026-02-16-11-임플란트-수명-20년-이상-쓰는-관리법.mdx
@@ -1,9 +1,10 @@
 ---
-title: "임플란트 수명 20년 이상 쓰는 관리법"
-description: "임플란트 수명 20년 이상 쓰는 관리법에 대한 상세 가이드. 임플란트 수명 정보와 꿀팁을 확인하세요."
-date: "2026-02-16"
-category: "임플란트 관리"
-author: "강남임플란트"
+title: 임플란트 수명 20년 이상 쓰는 관리법
+description: 임플란트 수명 20년 이상 쓰는 관리법에 대한 상세 가이드. 임플란트 수명 정보와 꿀팁을 확인하세요.
+date: '2026-02-16'
+category: 임플란트 관리
+author: 강남임플란트
+featuredImage: /images/blog/--20----1771087927430-0.webp
 ---
 
 # 임플란트 수명 20년 이상 쓰는 관리법
