--- a/content/blog/2026-02-15-03-오스템-임플란트-1개-가격과-장단점-완벽-가이드.mdx
+++ b/content/blog/2026-02-15-03-오스템-임플란트-1개-가격과-장단점-완벽-가이드.mdx
@@ -1,9 +1,10 @@
 ---
-title: "오스템 임플란트 1개 가격과 장단점 완벽 가이드"
-description: "오스템 임플란트 1개 가격과 장단점 완벽 가이드에 대한 상세 가이드. 오스템 임플란트 가격 정보와 꿀팁을 확인하세요."
-date: "2026-02-15"
-category: "임플란트 종류"
-author: "강남임플란트"
+title: 오스템 임플란트 1개 가격과 장단점 완벽 가이드
+description: 오스템 임플란트 1개 가격과 장단점 완벽 가이드에 대한 상세 가이드. 오스템 임플란트 가격 정보와 꿀팁을 확인하세요.
+date: '2026-02-15'
+category: 임플란트 종류
+author: 강남임플란트
+featuredImage: /images/blog/--1-----1771087894723-0.webp
 ---
 
 # 오스템 임플란트 1개 가격과 장단점 완벽 가이드
