Fix: Repair broken link in Bone Graft blog post

--- a/content/blog/2026-02-15-04-임플란트-뼈이식-과정과-실패-증상-총정리.mdx
+++ b/content/blog/2026-02-15-04-임플란트-뼈이식-과정과-실패-증상-총정리.mdx
@@ -152,9 +152,7 @@ featuredImage: /images/blog/------1771087898691-0.webp
 1. 측방 접근법(Lateral approach): 상악동 옆벽에 창을 내어 접근하는 방법
 2. 치조정 접근법(Crestal approach): 임플란트를 심을 부위에서 직접 접근하는 방법
 
-상악동 거상술은 다른 부위의 뼈이식보다 더 전문적인 기술이 요구되므로, 경험이 풍부한 의사에게 시술받는 것이 중요합니다. [상악동 거상술](https://livedentalcenter.com/%ec%83%81%ec%95%85%eb%8f%99-%ea%b1%b0%ec%83%81%ec%88%a0-%ec%9d%b4%eb%a6%84%eb%b6%80%ed%84%b0-%eb%ac%b4%ec%84%9c%ec%9a%b4%
-
-### 가%ec%9a%94-%eb%bc%88%ec%9d%b4%ec%8b%9d%eb%b6%80%ed%84%b0-%eb%b3%b4/) 관련 글에서 더 자세한 정보를 확인하실 수 있습니다.
+상악동 거상술은 다른 부위의 뼈이식보다 더 전문적인 기술이 요구되므로, 경험이 풍부한 의사에게 시술받는 것이 중요합니다. [상악동 거상술](https://livedentalcenter.com/%ec%83%81%ec%95%85%eb%8f%99-%ea%b1%b0%ec%83%81%ec%88%a0-%ec%9d%b4%eb%a6%84%eb%b6%80%ed%84%b0-%eb%ac%b4%ec%84%9c%ec%9a%b4%ea%b0%80%ec%9a%94-%eb%bc%88%ec%9d%b4%ec%8b%9d%eb%b6%80%ed%84%b0-%eb%b3%b4/) 관련 글에서 더 자세한 정보를 확인하실 수 있습니다.
 
 ## 임플란트 뼈이식 실패 증상 및 대처법
 
